--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write .",
-		"postinstall": "prisma generate"
+		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
@@ -39,10 +38,6 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@azure/msal-browser": "^2.35.0",
-		"@prisma/client": "^4.15.0",
-		"@threlte/core": "^5.0.8",
-		"@threlte/extras": "^4.9.3",
 		"axios": "^1.7.7",
 		"firebase": "^10.9.0",
 		"nodemailer": "^6.9.15",
