--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 	"dependencies": {
 		"axios": "^1.7.7",
 		"firebase": "^10.9.0",
+		"firebase-admin": "^13.0.2",
 		"nodemailer": "^6.9.15",
 		"peerjs": "^1.5.4",
 		"square": "^39.0.0",
